// Copyright (C) 2018 Bluzelle
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License, version 3,
// as published by the Free Software Foundation.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

message pbft_msg
{
    pbft_msg_type type = 1;

    // used for preprepare, prepare, commit
    uint64 view = 2;
    // used for preprepare, prepare, commit, checkpoint
    uint64 sequence = 3;

    // used for preprepare, prepare, commit
    bytes request_hash = 5;

    // most messages should only have the hash, not the original request
    bytes request = 4;

    // for checkpoints
    string state_hash = 6;
}

message pbft_config_msg
{
    // for new_config
    string configuration = 1;
}

enum pbft_msg_type
{
    PBFT_MSG_UNDEFINED = 0;
    PBFT_MSG_PREPREPARE = 2;
    PBFT_MSG_PREPARE = 3;
    PBFT_MSG_COMMIT = 4;
    PBFT_MSG_CHECKPOINT = 5;
    PBFT_MSG_VIEWCHANGE = 6;
}

message pbft_request
{
    string operation = 1;
    uint64 timestamp = 2;
    string client = 3;
    pbft_request_type type = 1;
    oneof msg
    {
        database_msg operation = 2;
        pbft_config_msg config = 3;
    }
    uint64 timestamp = 4;
    string client = 5;
}

enum pbft_request_type
{
    PBFT_REQ_UNDEFINED = 0;
    PBFT_REQ_DATABASE = 1;
    PBFT_REQ_NEW_CONFIG = 2;
}

message pbft_membership_msg
{
    pbft_membership_msg_type type = 1;

    // for join/leave requests
    pbft_peer_info peer_info = 2;

    // for get_state, set_state
    uint64 sequence = 3;
    string state_hash = 4;

    // for set_state
    string state_data = 5;
}

enum pbft_membership_msg_type
{
    PBFT_MMSG_UNDEFINED = 0;
    PBFT_MMSG_JOIN = 1;
    PBFT_MMSG_LEAVE = 2;
    PBFT_MMSG_GET_STATE = 3;
    PBFT_MMSG_SET_STATE = 4;
}

message pbft_peer_info
{
    string host = 1;
    uint32 port = 2;
    uint32 http_port = 3;
    string name = 4;
    string uuid = 5;
}
